STATISTIK-172: Fixed partly hidden tooltips by setting white-space css to pre-wrap.

--- a/statistics-web/src/main/webapp/css/inera-statistics.css
+++ b/statistics-web/src/main/webapp/css/inera-statistics.css
@@ -1385,6 +1385,10 @@ a.listheader.collapsed {
 		padding: 0px;
 		width: auto !important;
 	}
+	
+	.highcharts-tooltip span {
+	   white-space: pre-wrap !important;
+	}
 
 .navbar-inverse .navbar-inner {
 	background: #212633 !important; /* Old browsers */
